[package]
name = "campman"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fn_utils = { path = "../../fn_utils" }
anyhow = "1.0.68"
toml = "0.5.10"
macros = { path = "../macros" }
many-to-many = "0.1.7"
dirs = "4.0.0"
once_cell = "1.17.0"
thiserror = "1.0.38"
iced = "0.6.0"
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git" }
derive-new = "0.5.9"
rand = "0.8.5"
itertools = "0.10.5"
