[package]
name = "combat-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
anyhow = "1"
rpds = "0.12"
rand = "0.8.5"
lazy_static = "1.4"
argh = "0.1.9"
pad = "0.1.6"
